style: fix vertical alignment for iOS date/time values

--- a/src/rehearsals/rehearsals.css
+++ b/src/rehearsals/rehearsals.css
@@ -369,12 +369,12 @@
   width: 100%;
   min-width: 0;
   max-width: 100%;
-  height: auto;
+  height: 54px;
   margin: 0;
   padding: 0;
   overflow: hidden;
   text-align: left;
-  line-height: normal;
+  line-height: 54px;
   color: #3f4a45;
 }
 
